@@ -1,3 +1,9 @@
+2021-06-08 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/ds390/gen.c,
+	  src/ds390/main.c:
+	  Support GETABIT instead of GETHBIT.
+
 2021-06-08 Visenri
 	* src/SDCCpeeph.c:
 	  Fixed buffer overflow in operand string in "immdInRange" function.
